<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_add"
        android:title="@string/menu_add_plant"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_species_targets"
        android:title="@string/menu_species_targets"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_led_profiles"
        android:title="@string/menu_led_profiles"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export_data"
        android:title="@string/menu_export_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_import_data"
        android:title="@string/menu_import_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings"
        app:showAsAction="never" />
</menu>
