...
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/location_check_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/measurement_save_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/measurement_calibrate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/menu_calibrate"
        android:textAllCaps="false"
...
